--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   --fs-h1: 1.25rem;
   --fs-h2: 1.75rem;
   --fs-body: 1rem;
-  --fs-xl: 3rem;
+  --fs-xl: 2.5rem;
   --clr-light: #ECE4D7;
   --clr-dark: #2B1E1A;
   --clr-accent: #BE5000;
@@ -44,19 +44,27 @@ body {
 .main-screen {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  position: relative;
+  -ms-grid-columns: 0.7fr 1fr;
+      grid-template-columns: 0.7fr 1fr;
+  top: -100px;
 }
 
 .mars-current-weather {
   background-color: rgba(43, 30, 26, 0.8);
   padding: 2em;
   max-width: 1000px;
-  margin: 2em 4em;
+  margin: 0 0 0 10em;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 2fr 2fr;
-      grid-template-rows: 1fr 2fr 2fr;
+  -ms-grid-rows: 0.5fr 1fr 0.5fr;
+      grid-template-rows: 0.5fr 1fr 0.5fr;
+  -ms-grid-columns: 1fr 0.5fr;
+      grid-template-columns: 1fr 0.5fr;
+  gap: 0.5em;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 20px 20px #000000a2;
+          box-shadow: 0px 20px 20px #000000a2;
 }
 
 .main-title-2 {
@@ -85,9 +93,86 @@ h1, h2, h3 {
   line-height: 1;
 }
 
+.reading {
+  font-size: 160%;
+  font-weight: var(--fw-light);
+  margin: 0;
+  opacity: 0.8;
+}
+
 .section-title {
   font-size: var(--fs-xl);
   font-weight: var(--fw-bold);
   margin: 0;
+}
+
+.date {
+  grid-row: 1/-4;
+}
+
+.date__day {
+  font-size: 160%;
+  font-weight: var(--fw-light);
+  margin: 0;
+  opacity: 0.8;
+}
+
+.temp {
+  --border: solid 2px var(--clr-accent);
+  grid-row: 2/-3;
+  border-top: var(--border);
+  border-bottom: var(--border);
+  padding: 10px 0;
+}
+
+.wind {
+  grid-row: 3/-2;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+}
+
+.wind__direction {
+  --size: 60px;
+  width: var(--size);
+  height: var(--size);
+  background-color: var(--clr-light);
+  opacity: 0.9;
+  border-radius: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.wind__arrow {
+  --direction: 0deg;
+  --size: 10px;
+  height: calc(var(--size)*3);
+  width: var(--size);
+  background-color: var(--clr-accent);
+  -webkit-clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+          clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+  -webkit-transform: translateY(-50%) rotate(var(--direction));
+          transform: translateY(-50%) rotate(var(--direction));
+  -webkit-transform-origin: bottom center;
+          transform-origin: bottom center;
+}
+
+.unit {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+}
+
+.icon {
+  fill: var(--clr-light);
+  position: relative;
+  left: 120px;
+  top: -33px;
+  height: 170px;
 }
 /*# sourceMappingURL=main.css.map */
