--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,8 @@ body {
   display: -ms-grid;
   display: grid;
   position: relative;
-  -ms-grid-columns: 0.7fr 1fr;
-      grid-template-columns: 0.7fr 1fr;
+  -ms-grid-columns: 0.5fr 1fr;
+      grid-template-columns: 0.5fr 1fr;
   top: -100px;
 }
 
@@ -59,8 +59,6 @@ body {
   display: grid;
   -ms-grid-rows: 0.5fr 1fr 0.5fr;
       grid-template-rows: 0.5fr 1fr 0.5fr;
-  -ms-grid-columns: 1fr 0.5fr;
-      grid-template-columns: 1fr 0.5fr;
   gap: 0.5em;
   border-radius: 10px;
   -webkit-box-shadow: 0px 20px 20px #000000a2;
@@ -115,14 +113,34 @@ h1, h2, h3 {
   font-weight: var(--fw-light);
   margin: 0;
   opacity: 0.8;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
 }
 
 .temp {
   --border: solid 2px var(--clr-accent);
-  grid-row: 2/-3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 0.5fr 1fr;
+      grid-template-rows: 0.5fr 1fr;
+  grid-column: 1/-1;
   border-top: var(--border);
   border-bottom: var(--border);
   padding: 10px 0;
+}
+
+.temp .reading {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.temp .reading_low {
+  padding-top: 35px;
 }
 
 .wind {
@@ -176,12 +194,60 @@ h1, h2, h3 {
 }
 
 .unit {
-  -ms-grid-column: 2;
+  -ms-grid-column: 1;
   -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  -ms-grid-row: 3;
+  grid-column: 1/ 2;
+  -ms-grid-row: 2;
   -ms-grid-row-span: 1;
-  grid-row: 3/4;
+  grid-row: 2/3;
+  margin-bottom: 7px;
+  place-self: end;
+  color: var(--clr-light);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0.9;
+}
+
+.unit label {
+  cursor: pointer;
+}
+
+.unit input {
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.unit__toggle {
+  cursor: pointer;
+  width: 30px;
+  height: 17px;
+  border: 2px solid var(--clr-light);
+  background: transparent;
+  padding: 0;
+  border-radius: 100vmax;
+  margin: 3px 7px;
+}
+
+.unit__toggle::after {
+  content: ' ';
+  display: block;
+  background-color: var(--clr-light);
+  border-radius: 50%;
+  height: 10px;
+  margin: 2px;
+  margin-left: auto;
+  width: 10px;
+}
+
+.unit :checked ~ .unit__toggle::after {
+  margin-left: 2px;
 }
 
 .icon {
