--- a/css/main.scss
+++ b/css/main.scss
@@ -39,7 +39,7 @@ body{
 .main-screen{
     display: grid;
     position: relative;
-    grid-template-columns: 0.7fr 1fr;
+    grid-template-columns: 0.5fr 1fr;
     top: -100px;
     
 }
@@ -50,7 +50,7 @@ body{
     margin:0 0 0 10em;
     display: grid;
     grid-template-rows: 0.5fr 1fr 0.5fr;
-    grid-template-columns:1fr 0.5fr ;
+   // grid-template-columns:1fr 0.5fr ;
     gap: 0.5em;
     border-radius: 10px;
     box-shadow: 0px 20px 20px #000000a2;
@@ -93,20 +93,33 @@ h1, h2, h3{
 }
 .date{
     grid-row: 1/-4;
+   
+
 
     &__day{
         font-size: 160%;
         font-weight: var(--fw-light);
         margin: 0;
         opacity: 0.8;
+        grid-row: 2/3;
     }
 }
 .temp{
     --border: solid 2px var(--clr-accent);
-    grid-row: 2/-3;
+    display: grid;
+    grid-template-rows: 0.5fr 1fr;
+    grid-column: 1/-1;
     border-top: var(--border);
     border-bottom: var(--border);
     padding: 10px 0 ;
+
+    .reading{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .reading_low{
+        padding-top: 35px;
+    }
 }
 .wind{
     grid-row: 3/-2;
@@ -147,8 +160,54 @@ h1, h2, h3{
     }
 }
 .unit{
-    grid-column:2/3 ;
-    grid-row: 3/4;
+    grid-column:1/ 2 ;
+    grid-row: 2/3;
+    margin-bottom: 7px;
+    place-self: end;
+    color: var(--clr-light);
+    display: flex;
+    opacity: 0.9;
+
+    label{
+        cursor: pointer;
+    }
+
+    input{
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+    }
+
+    &__toggle{
+        cursor: pointer;
+        width: 30px;
+        height: 17px;
+        border: 2px solid var(--clr-light);
+        background: transparent;
+        padding: 0;
+        border-radius: 100vmax;
+        margin: 3px 7px ;
+
+        &::after{
+            content: ' ';
+            display: block;
+            background-color: var(--clr-light);
+            border-radius: 50%;
+            height: 10px;
+            margin: 2px;
+            margin-left: auto;
+            width: 10px;
+
+
+        }
+    }
+    :checked ~ .unit__toggle::after{
+        margin-left: 2px;
+    }
 }
 .icon{
     fill: var(--clr-light);
