--- a/css/main.scss
+++ b/css/main.scss
@@ -162,7 +162,7 @@ h1, h2, h3{
 .unit{
     grid-column:1/ 2 ;
     grid-row: 2/3;
-    margin-bottom: 7px;
+    margin-bottom: 6px;
     place-self: end;
     color: var(--clr-light);
     display: flex;
@@ -215,6 +215,26 @@ h1, h2, h3{
     left: 120px;
     top: -33px;
     height: 170px;
+}
+.previous-weather{
+    background-color: rgba(236, 228, 215, 0.9);
+    color: #2B1E1A;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    transform: translateY(95%);
+}
+.show-previous-weather-label{
+    position: absolute;
+    background: green;
+    color: var(--clr-dark);
+    width: 10rem;
+    height: 1.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+.previous-days{
+    display: flex;
     
-
 }
