--- a/css/main.scss
+++ b/css/main.scss
@@ -190,7 +190,7 @@ h1, h2, h3{
         background: transparent;
         padding: 0;
         border-radius: 100vmax;
-        margin: 3px 7px ;
+        margin: 5px 7px ;
 
         &::after{
             content: ' ';
@@ -198,7 +198,7 @@ h1, h2, h3{
             background-color: var(--clr-light);
             border-radius: 50%;
             height: 10px;
-            margin: 2px;
+            margin: 2px 2px 2px 1px;
             margin-left: auto;
             width: 10px;
 
@@ -209,7 +209,7 @@ h1, h2, h3{
         margin-left: 2px;
     }
 }
-.icon{
+.icon_sun{
     fill: var(--clr-light);
     position: relative;
     left: 120px;
@@ -217,24 +217,114 @@ h1, h2, h3{
     height: 170px;
 }
 .previous-weather{
-    background-color: rgba(236, 228, 215, 0.9);
-    color: #2B1E1A;
+    background-color:rgba(255, 255, 255, 0.9);
     position: absolute;
     bottom: 0;
     width: 100%;
-    transform: translateY(95%);
+    transform: translateY(80%);
+    transition: transform 350ms ease;
+    padding: 20px 40px 40px 40px;
 }
-.show-previous-weather-label{
+.show-previous-weather-button{
     position: absolute;
-    background: green;
-    color: var(--clr-dark);
+    background: rgba(255, 255, 255, 0.9);;
     width: 10rem;
     height: 1.5rem;
     left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
+    transform: translate(-50%, calc(-98% - 20px));
+    overflow: hidden;
+    clip-path: polygon(50% 0%, 0 100%, 100% 100%);
+    cursor: pointer;
+    border: 0; 
+
+    .arrow_icon{
+        fill: var(--clr-accent);
+        position: relative;
+        height: 50px;
+        transform: translateX(+3%) rotate(0);
+     //   transition: transform 350ms ease;
+
+        &:hover,
+        &:focus{
+            fill: #973f00;
+            transition: fill 200ms ease;
+        }
+        
+    }
 }
 .previous-days{
     display: flex;
-    
+    justify-content: space-between;
+    color: var(--clr-dark);
+}
+.previous-day{
+    opacity: 0;
+
+    & > *{margin: 0;}
+
+    &__more-info{
+        cursor: pointer;
+        border-radius: 100vmax;
+        border: 0;
+        background: #BE5000;
+        color: white;
+        padding: 3px 10px;
+        text-transform: uppercase;
+        font-size: 70%;
+        transition: background 250ms ease;
+        margin-top:10px;
+
+        &:hover{
+            background: #973f00;
+        }
+    }
+}
+.previous-weather__title{
+    font-family: 'Fugaz One',sans-serif;
+    text-align: center;
+    margin: 0 0 30px 0;
+    color: var(--clr-accent);   
+}
+.show-weather.previous-weather{
+    transform: translateY(0);
+
+    .arrow_icon{
+        transform: rotate(180deg) translateY(25px);
+        transition: transform 350ms ease;
+    }
+    .previous-weather__title,
+    .previous-day{
+        animation: slideUpIn 750ms forwards;
+        
+    }
+    .previous-weather__title{
+        text-align: left;
+        &::after{
+            display: block;
+            content: '';
+            height: 2px;
+            width: 222px;
+            background-color: var(--clr-accent);
+        }
+    }
+
+
+    .previous-day:nth-child(1){animation-delay: 100ms;}
+    .previous-day:nth-child(2){animation-delay: 125ms;}
+    .previous-day:nth-child(3){animation-delay: 150ms;}
+    .previous-day:nth-child(4){animation-delay: 175ms;}
+    .previous-day:nth-child(5){animation-delay: 200ms;}
+    .previous-day:nth-child(6){animation-delay: 225ms;}
+    .previous-day:nth-child(7){animation-delay: 250ms;}
+
+}
+@keyframes slideUpIn{
+    0%{
+        opacity: 0;
+        transform: translateY(50%);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
